just a test for sles11 building
Signed-off-by: Brian J. Murrell <brian@whamcloud.com>
Change-Id: I84617f429b0cef23a24fe161158580917ffe3041

--- a/README
+++ b/README
@@ -1,3 +1,4 @@
 Instructions for building, configuring and running Lustre can be found at:
     http://wiki.lustre.org/index.php/Use
 
+Just a test of sles11 build
