--- a/lustre/ChangeLog
+++ b/lustre/ChangeLog
@@ -1,12 +1,12 @@
 TBD  Oracle, Inc.
        * version 2.1.0
        * Server support for kernels:
-         2.6.18-238.9.1.el5 (RHEL5)
-         2.6.32-71.18.2.el6 (RHEL6)
+         2.6.18-238.12.1.el5 (RHEL5)
+         2.6.32-131.0.15.el6 (RHEL6)
        * Client support for unpatched kernels:
          (see http://wiki.lustre.org/index.php?title=Patchless_Client)
-         2.6.18-238.9.1.el5 (RHEL5)
-         2.6.32-71.18.2.el6 (RHEL6)
+         2.6.18-238.12.1.el5 (RHEL5)
+         2.6.32-131.0.15.el6 (RHEL6)
          2.6.29.4-167.fc11  (FC11)
          2.6.16.60-0.69.1 (SLES10)
          2.6.27.19-5      (SLES11)
@@ -16,6 +16,11 @@ TBD  Oracle, Inc.
          information, please refer to bugzilla 17630.
 
 Severity   : enhancement
+Jira       : LU-403
+Description: Kernel update [RHEL5 U6 2.6.18-238.12.1.el5]
+
+Severity   : enhancement
+Jira       : LU-228
 Description: Update RHEL5.6 kernel to 2.6.18-238.9.1.el5
 
 Severity   : normal
