--- a/lustre/ChangeLog
+++ b/lustre/ChangeLog
@@ -2,17 +2,17 @@
 	* version 1.8.6-wc
 	* Support for kernels:
 	  2.6.18-238.12.1.el5 (RHEL 5)
-	  2.6.32-71.18.2.el6 (RHEL 6) - patchless client only
+	  2.6.32-131.2.1.el6 (RHEL 6) - patchless client only
 	* Recommended e2fsprogs version: 1.41.90.wc2
 	* Use ext4-based ldiskfs as default for RHEL5
 	* Add support for 24TB LUN (RHEL5 server only)
 
 Severity   : enhancement
-Jira       : LU-228
-Description: Add support for RHEL5.6 (2.6.18-238.9.1.el5)
+Jira       : LU-228, LU-403
+Description: Add support for RHEL5.6 (2.6.18-238.12.1.el5)
 
 Severity   : enhancement
-Jira       : LU-62, LU-73
+Jira       : LU-62, LU-73, LU-402
 Description: Add RHEL6 client support
 
 Severity   : major
