--- a/lustre/ChangeLog
+++ b/lustre/ChangeLog
@@ -1,4 +1,4 @@
-TBD  Oracle, Inc.
+08-20-2011 Whamcloud, Inc.
        * version 2.1.0
        * Server support for kernels:
          2.6.18-238.19.1.el5 (RHEL5)
