--- a/lustre/ChangeLog
+++ b/lustre/ChangeLog
@@ -2,7 +2,7 @@ xxxx-xx-xx Whamcloud, Inc.
 	* version 1.8.6.80-wc1
 	* Support for kernels:
 	  2.6.18-274.3.1.el5 (RHEL 5)
-	  2.6.32-131.2.1.el6 (RHEL 6) - patchless client only
+	  2.6.32-131.12.1.el6 (RHEL 6) - patchless client only
 	* Recommended e2fsprogs version: 1.41.90.wc3
 	* Use ext4-based ldiskfs as default for RHEL5
 	* Add support for 24TB LUN (RHEL5 server only)
@@ -10,6 +10,10 @@ xxxx-xx-xx Whamcloud, Inc.
 Severity   : enhancement
 Jira       : LU-674
 Description: Add support for RHEL5.7 [2.6.18-274.3.1.el5]
+
+Severity   : enhancement
+Jira       : LU-624
+Description: Kernel update [RHEL6.1 2.6.32-131.12.1.el6] (client only).
 
 -------------------------------------------------------------------------------
 
