--- a/lustre/ChangeLog
+++ b/lustre/ChangeLog
@@ -1,11 +1,11 @@
 TBD Whamcloud, Inc.
        * version 2.2.0
        * Server support for kernels:
-         2.6.18-238.19.1.el5 (RHEL5)
+         2.6.18-274.7.1.el5 (RHEL5)
          2.6.32-131.17.1.el6 (RHEL6)
        * Client support for unpatched kernels:
          (see http://wiki.lustre.org/index.php?title=Patchless_Client)
-         2.6.18-238.19.1.el5 (RHEL5)
+         2.6.18-274.7.1.el5 (RHEL5)
          2.6.32-131.17.1.el6 (RHEL6)
          2.6.29.4-167.fc11  (FC11)
          2.6.16.60-0.69.1 (SLES10)
@@ -16,6 +16,10 @@ TBD Whamcloud, Inc.
          information, please refer to bugzilla 17630.
        * NFSv4 reexport requires Lustre client on the re-exporting nodes to be
          mounted with "32bitapi" mount option
+
+Severity   : enhancement
+Jira       : LU-674
+Description: Kernel update for RHEL5.7 [2.6.18-274.7.1.el5]
 
 Severity   : enhancement
 Jira       : LU-624
