LU-827 lov: Implement a per file data_version.
This patch extends getattr RPC to also send in its reply a data
version for the file content.  This only tracks data object changes.
This does not track chown/chmod on OST object.  This value always
increases but is intended to be only compared for equality.
A new call in liblustreapi is available and through 'lfs data_version'.

Signed-off-by: Aurelien Degremont <aurelien.degremont@cea.fr>
Change-Id: I5d748e096b11627c05f86ef6f3f6906bce120893

--- a/lustre/doc/lfs.1
+++ b/lustre/doc/lfs.1
@@ -72,6 +72,8 @@ lfs \- Lustre utility to create a file with specific striping pattern, find the 
              \fB[-b <block-grace>] [-i <inode-grace>]
              \fB<filesystem>\fR
 .br
+.B lfs data_version \fB<filename>\fR
+.br
 .B lfs help
 .SH DESCRIPTION
 .B lfs
@@ -219,6 +221,8 @@ To set filesystem quotas for users or groups. Limits can be specified with -b, -
 .B setquota -t [-u|-g] [--block-grace <block-grace>] [--inode-grace <inode-grace>] <filesystem>
 To set filesystem quota grace times for users or groups. Grace time is specified in "XXwXXdXXhXXmXXs" format or as an integer seconds value, see EXAMPLES
 .TP
+.B data_version <filename>
+Display current version of file data.
 .B help 
 Provides brief help on the various arguments
 .TP
