--- a/lustre/ChangeLog
+++ b/lustre/ChangeLog
@@ -1,25 +1,24 @@
 TBD Whamcloud, Inc.
        * version 2.2.0
+       * See http://wiki.whamcloud.com/display/PUB/Lustre+Support+Matrix
        * Server support for kernels:
+         2.6.32-131.6.1.el6  (RHEL6)
          2.6.18-238.19.1.el5 (RHEL5)
-         2.6.32-131.6.1.el6 (RHEL6)
        * Client support for unpatched kernels:
-         (see http://wiki.lustre.org/index.php?title=Patchless_Client)
+         2.6.32-131.6.1.el6  (RHEL6)
+         2.6.27.19-5         (SLES11)
          2.6.18-238.19.1.el5 (RHEL5)
-         2.6.32-131.6.1.el6 (RHEL6)
-         2.6.29.4-167.fc11  (FC11)
-         2.6.16.60-0.69.1 (SLES10)
-         2.6.27.19-5      (SLES11)
+         2.6.16.60-0.69.1    (SLES10)
        * Recommended e2fsprogs version: 1.41.90.wc3
-       * NFS export disabled when stack size < 8192. Since the NFSv4 export of
-         Lustre filesystem with 4K stack may cause a stack overflow. For more
-         information, please refer to bugzilla 17630.
-       * NFSv4 reexport requires Lustre client on the re-exporting nodes to be
-         mounted with "32bitapi" mount option
+       * NFS export disabled when stack size < 8192 (32-bit Lustre clients),
+         since the NFSv4 export of Lustre filesystem with 4K stack may cause a
+         stack overflow. For more information, please refer to bugzilla 17630.
+       * NFSv4 reexport to 32-bit client nodes requires Lustre client on the
+         re-exporting nodes to be mounted with "32bitapi" mount option
 
 --------------------------------------------------------------------------------
 
-09-16-2011 Whamcloud, Inc.
+09-30-2011 Whamcloud, Inc.
        * version 2.1.0
        * Server support for kernels:
          2.6.18-238.19.1.el5 (RHEL5)
@@ -60,7 +59,7 @@ Details    : SLES10 SP3 ships with OFED in a separate "KMP" package.
 Severity   : enhancement
 Bugzilla   : 22514
 Description: Update RHEL5.5 kernel to 2.6.18-194.17.1.el5
-             Update OEL5.5  kernel to 2.6.18-194.17.1.0.1.el5.
+	     Update OEL5.5  kernel to 2.6.18-194.17.1.0.1.el5.
 
 --------------------------------------------------------------------------------
 
