LU-888 lctl: remove perilous lctl {get,set,list}_param behavior.
This patch stops the {get,set)_param from potentially reading and
writing to file in the current working directory. Now lctl
{get,set,list}_param visits /proc/{fs,sys}/{lnet,lustre} for
parameter values. Specifying a file path to {get,set,list}_param
is deprecated behavoir.

Using a path with lctl {get,set,list}_param fails if the path does
not begin with '/proc/'. If the path begins with '/proc/' a warning
is printed the command executes using the given path.

A new helper function lprocfs_param_pattern is introduced to
provide checking and constructing the proc path.

Test suite has been searched for {get,set,list}_param lctl calls.
All specified parameters have been checked to ensure they are
not using the deprecated path interface.

lctl man page is updated to remove ambiguity around using paths
to specifiy parameters.

Signed-off-by: Richard Henwood <rhenwood@whamcloud.com>
Change-Id: I39e355b28fb1337f5b3a53f9e7265f4e969ddd2d

--- a/lustre/doc/lctl.8
+++ b/lustre/doc/lctl.8
@@ -92,15 +92,14 @@ Show all the local Lustre OBDs. AKA
 .PP
 .SS Device Operations
 .TP 
-.BI list_param " [-F|-R] <param_path ...>"
+.BI list_param " [-F|-R] <param_search ...>"
 List the Lustre or LNet parameter name
-.br
 .B -F
 Add '/', '@' or '=' for dirs, symlinks and writeable files, respectively.
 .br
 .B -R
-Recursively list all parameters under the specified path. If
-.I param_path 
+Recursively list all parameters under the specified parameter search string. If
+.I param_search
 is unspecified, all the parameters will be shown.
 .br
 .B Examples:
@@ -121,7 +120,7 @@ is unspecified, all the parameters will be shown.
 .br
   debug=
 .br
-.B	
+.B
 # lctl list_param -R mdt
 .br
   mdt
@@ -142,8 +141,8 @@ is unspecified, all the parameters will be shown.
 .br
   ...
 .TP
-.BI get_param " [-n|-N|-F] <param_path ...>"
-Get the value of Lustre or LNET parameter from the specified path.
+.BI get_param " [-n|-N|-F] <parameter ...>"
+Get the value of Lustre or LNET parameter.
 .br
 .B -n
 Print only the value and not parameter name.
@@ -181,8 +180,8 @@ When -N specified, add '/', '@' or '=' for directories, symlinks and writeable f
 .br
 lctl "get_param -NF" is equivalent to "list_param -F".
 .TP
-.BI set_param " [-n] <param_path=value ...>"
-Set the value of Lustre or LNET parameter from the specified path.
+.BI set_param " [-n] <parameter=value ...>"
+Set the value of Lustre or LNET parameter.
 .br
 .B -n
 Disable printing of the key name when printing values.
