LU-3888 utils: print lmm_fid as part of getstripe
Print the lmm_fid in the standard DFID format in addition to the older
lmm_object_id and lmm_seq fields when using "lfs getstripe -v".  This
is still a bit of a hack, since lmm_mds_md_{v1,v3} do not store a
proper FID in the header, so the fields need to be parsed separately
instead of using lmm_oi_seq() and lmm_oi_id(), but at least userspace
can start using this output in scripts instead of needing to call
path2fid separately.

In the future, new layout formats should use proper FIDs instead of
ost_id fields.

Add "lfs getstripe -F" to print the lmm_fid of a file.  This should
match the inode FID from "lfs fid2path" for 2.x-created files.

Fix lfs_fid2path() to not complain on the MDS if an invalid FID is
requested, since an error is returned to the application anyway.
Don't print errors in llapi_fid2path(), there is already one being
printed in lfs_fid2path().

Signed-off-by: Andreas Dilger <andreas.dilger@intel.com>
Signed-off-by: Lokesh Nagappa Jaliminche <lokesh.jaliminche@seagate.com>
Change-Id: I4e27797ec3905327ea0a88911b1c75193d500c1e

--- a/lustre/doc/lfs.1
+++ b/lustre/doc/lfs.1
@@ -31,8 +31,7 @@ lfs \- Lustre utility to create a file with specific striping pattern, find the 
 .br
 .B lfs getstripe [--obd|-O <uuid>] [--quiet|-q] [--verbose|-v] 
         \fB[--stripe-count|-c ] [--stripe-index|-i] [--mdt-index|-M]
-        \fB[--stripe-size|-S] [--directory|-d]
-        \fB[--layout|-L]
+        \fB[--stripe-size|-S] [--directory|-d] [--layout|-L] [--fid|-F]
         \fB[--pool|-p] [--recursive|-r] [--raw|-R] <dirname|filename> ...\fR
 .br
 .B lfs setstripe [--stripe-size|-S stripe_size] [--stripe-count|-c stripe_count]
@@ -134,7 +133,7 @@ to that filesystem are displayed.
 .B getstripe [--obd|-O <uuid>] [--quiet|-q] [--verbose|-v] 
         \fB[--count | -c ] [--index | -i | --offset | -o  ]
         \fB[--pool | -p ] [--size | -s ] [--directory | -d ]
-        \fB[--layout | -L]
+        \fB[--layout | -L ] [--fid | -F ]
         \fB[--recursive | -r ] [--raw | -R ] <dirname|filename>\fR
 .br
 List the striping information for a given filename or directory tree.
@@ -145,6 +144,7 @@ only want specific striping information then the options of
 .BR --index ,
 .BR --offset ,
 .BR --layout ,
+.BR --fid ,
 or
 .B --pool  
 can be used to return only the specific fields.
@@ -173,6 +173,8 @@ can be used to limit the information, like
 .RB ' "ls -d" ').
 You can limit the returned files to those with objects on a specific OST with
 .BR --obd .
+To show only the FID use
+.BR --fid .
 .TP
 .B setstripe [--stripe-count|-c stripe_count] [--stripe-size|-S stripe_size]
         \fB[--stripe-index|-i start_ost_index] [--pool <poolname>]
