--- a/lustre/ChangeLog
+++ b/lustre/ChangeLog
@@ -1,4 +1,5 @@
 TBD Intel Corporation
+       * Interop test between 2.5/2.7 and DNE2
        * version 2.8.0
        * See https://wiki.hpdd.intel.com/display/PUB/Lustre+Support+Matrix
          for currently supported client and server kernel versions.
