LU-6660 dne: interop with 2.5 clients
This test is to verify 2.5 clients can work
with DNE2 servers.

Test-Parameters: fortestonly alwaysuploadlogs envdefinitions=SLOW=yes,ENABLE_QUOTA=yes mdtfilesystemtype=ldiskfs mdsfilesystemtype=ldiskfs ostfilesystemtype=ldiskfs clientdistro=el6.6 ossdistro=el6.6 mdsdistro=el6.6 clientarch=x86_64 ossarch=x86_64 mdsarch=x86_64 clientjob=lustre-b2_5 clientbuildno=131 ossjob=lustre-reviews ossbuildno=32529 mdsjob=lustre-reviews mdsbuildno=32529 mdtcount=4 testlist=sanity
Signed-off-by: Lai Siyao <lai.siyao@intel.com>
Change-Id: I43e4a64f1ab4e4dc4ab4bd7e0e76835def827a84

--- a/lustre/ChangeLog
+++ b/lustre/ChangeLog
@@ -1,4 +1,5 @@
 TBD Intel Corporation
+       * Interop test between 2.5 clients and DNE2 server
        * version 2.8.0
        * See https://wiki.hpdd.intel.com/display/PUB/Lustre+Support+Matrix
          for currently supported client and server kernel versions.
