--- a/lustre/ChangeLog
+++ b/lustre/ChangeLog
@@ -1,3 +1,7 @@
+Latest tag 2.7.54 Tue Jun  9 00:00:39 PDT 2015
+
+Latest tag 2.7.54 Tue Jun  9 00:00:22 PDT 2015
+
 TBD Intel Corporation
        * version 2.8.0
        * See https://wiki.hpdd.intel.com/display/PUB/Lustre+Support+Matrix
