--- a/lustre/doc/lnetctl.8
+++ b/lustre/doc/lnetctl.8
@@ -79,6 +79,12 @@ CPU partitions 0 and 1, you would specify this parameter as \-\-cpt [0,
 1]
 .
 .br
+\-\-checksum: The algorithm used to create a check sum value for a data packet.
+The generated value will be used to check to see if data corruption has happened
+during transmission. Only enable this if you have hardware accelerated check
+summing.
+.
+.br
 
 .
 .TP
