LU-6034 lnet: Enable lnetctl to handle checksum settings for LNet
Add the ability for lnetctl to query or set the checksum algorithm
for an LNet interface. This patch only enables user land side of
setting this.

Change-Id: I40ec55e73032d24baf3133703efc59d49446d692
Signed-off-by: James Simmons <uja.ornl@yahoo.com>

--- a/lustre/doc/lnetctl.8
+++ b/lustre/doc/lnetctl.8
@@ -79,6 +79,13 @@ CPU partitions 0 and 1, you would specify this parameter as \-\-cpt [0,
 1]
 .
 .br
+\-\-checksum: The algorithm used to create a check sum value for a data packet.
+Setting this to algorithm than the default null will generated a check sum value
+will be transmitted with the packet that once on arrival will then be used to
+ensure data corruption has not happened. Only enable this if you have hardware
+accelerated check summing.
+.
+.br
 
 .
 .TP
