LU-7009 test: test DNE on ZFS
not aim to land, just test DNE on ZFS.

Test-Parameters: fortestonly alwaysuploadlogs envdefinitions=SLOW=yes,ENABLE_QUOTA=yes mdtfilesystemtype=zfs mdsfilesystemtype=zfs ostfilesystemtype=zfs clientdistro=el6.6 ossdistro=el6.6 mdsdistro=el6.6 clientarch=x86_64 ossarch=x86_64 mdsarch=x86_64 clientjob=lustre-master clientbuildno=3159 ossjob=lustre-master mdsjob=lustre-master ossbuildno=3159 mdsbuildno=3159 mdtcount=4
Signed-off-by: Lai Siyao <lai.siyao@intel.com>
Change-Id: I16fc5bfaefb85160c3f7328c45950354602d1966

--- a/lustre/ChangeLog
+++ b/lustre/ChangeLog
@@ -1,4 +1,5 @@
 TBD Intel Corporation
+       * test DNE on ZFS.
        * version 2.8.0
        * See https://wiki.hpdd.intel.com/display/PUB/Lustre+Support+Matrix
          for currently supported client and server kernel versions.
