--- a/lustre/ChangeLog
+++ b/lustre/ChangeLog
@@ -16,6 +16,8 @@ TBD Intel Corporation
          3.0.101-0.47.52     (SLES11 SP3)
          3.12.39-47          (SLES12)
        * Recommended e2fsprogs version: 1.42.9.wc1 or newer
+       * Recommended ZFS / SPL version: 0.6.5
+       * Tested with ZFS / SPL version: 0.6.5
        * NFS export disabled when stack size < 8192 (32-bit Lustre clients),
          since the NFSv4 export of Lustre filesystem with 4K stack may cause a
          stack overflow. For more information, please refer to bugzilla 17630.
