LU-7134 utils: Ensure MMP support in SPL/ZFS during mkfs
Ensure multi-mount protection in SPL.  spl_hostid must be set to a
non-zero value for it to work correctly.  Error out during mkfs and
tunefs unless override is passed.  Also print error during mount.

Ensure hostid is set in conf-sanity.sh

Signed-off-by: Nathaniel Clark <nathaniel.l.clark@intel.com>
Change-Id: If37318c20e4502a643992e6bc21ac4bc4ad20ed7

--- a/lustre/doc/mkfs.lustre.8
+++ b/lustre/doc/mkfs.lustre.8
@@ -145,6 +145,9 @@ avoids having the target try to register as a new target with the MGS.
 .BI \--stripe-count-hint= stripes
 Used for optizing MDT inode size
 .TP
+.BI \--force-nohostid
+Ignore unset hostid for ZFS multi-mount-protection.
+.TP
 .BI \--verbose
 Print more information.
 .TP
