--- a/lustre/ChangeLog
+++ b/lustre/ChangeLog
@@ -1,4 +1,4 @@
-TBD Intel Corporation
+TBD Intel Corporation xx
        * version 2.8.0
        * See https://wiki.hpdd.intel.com/display/PUB/Lustre+Support+Matrix
          for currently supported client and server kernel versions.
