--- a/lustre/doc/llapi_layout_alloc.3
+++ b/lustre/doc/llapi_layout_alloc.3
@@ -56,9 +56,8 @@ set to an approporiate error code.
 returns no value.
 .SH ERRORS
 .TP 15
-.SM ENOMEM
-Insufficient storage space is available.
+.SM EINVAL
+Invalid arguments.
 .SH "SEE ALSO"
-.BR llapi_layout_file_create (3),
-.BR llapi_layout (7),
+.BR lfs-ladvise (1),
 .BR liblustreapi (7)
